# dedyfo-bot

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  env.example  info.py  main.py  pyproject.toml  requirements.txt  script.bash
.github/workflows/: ci.yml
bot/: __init__.py  app.py  config.py
bot/api/: quotes_client.py
bot/config/: __init__.py  settings.py
bot/core/: __init__.py  container.py  dependencies.py
bot/database/: __init__.py  base.py  connection.py  models.py
bot/handlers/: __init__.py  about.py  admin.py  main.py  new_features.py  portfolio.py  quotes.py  start.py
bot/keyboards/: __init__.py  main_keyboard.py
bot/middleware/: __init__.py  analytics.py  auth.py  rate_limit.py  user_context.py
bot/services/: __init__.py  analytics.py  base.py  cache.py  external_api.py  notification.py  user.py
bot/usecases/: quotes.py
migrations/: env.py
